# tgcryptfs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  pages.yml  release.yml
crates/tgcryptfs-api/: Cargo.toml
crates/tgcryptfs-api/src/: error.rs  lib.rs  types.rs
crates/tgcryptfs-api/src/server/: auth.rs  middleware.rs  mod.rs  routes.rs  state.rs  test_helpers.rs
crates/tgcryptfs-api/src/server/handlers/: auth.rs  deadman.rs  mod.rs  sharing.rs  system.rs  volume.rs
crates/tgcryptfs-api/src/service/: auth.rs  cache.rs  deadman.rs  mod.rs  session.rs  sharing.rs  system.rs  volume.rs
crates/tgcryptfs-api/tests/: api_full_integration.rs  api_integration.rs  security_api.rs  server_integration.rs
crates/tgcryptfs-cache/: Cargo.toml
crates/tgcryptfs-cache/src/: block_cache.rs  error.rs  lib.rs
crates/tgcryptfs-cli/: Cargo.toml
crates/tgcryptfs-cli/src/: main.rs
crates/tgcryptfs-cli/src/commands/: auth.rs  configure.rs  deadman.rs  key.rs  mod.rs  serve.rs  sharing.rs  status.rs  utils.rs  volume.rs
crates/tgcryptfs-cli/tests/: cli_integration.rs
crates/tgcryptfs-core/: Cargo.toml
crates/tgcryptfs-core/src/: error.rs  lib.rs
crates/tgcryptfs-core/src/block/: cdc.rs  compress.rs  dedup.rs  mod.rs  pointer.rs  srb1.rs
crates/tgcryptfs-core/src/crypto/: aead.rs  blake3.rs  kdf.rs  keys.rs  mlkem.rs  mod.rs
crates/tgcryptfs-core/src/metadata/: inode.rs  manifest.rs  mod.rs  types.rs
crates/tgcryptfs-core/src/policy/: engine.rs  parser.rs  types.rs
crates/tgcryptfs-core/src/sentence/: decode.rs  encode.rs  mod.rs  validate.rs  wordlists.rs  wordlists_data.rs
crates/tgcryptfs-core/src/snapshot/: entry.rs  log.rs  mod.rs
crates/tgcryptfs-core/src/volume/: config.rs  manager.rs  mod.rs  names.rs
crates/tgcryptfs-core/tests/: crypto_integration.rs  proptest_block.rs  proptest_crypto.rs  security_tests.rs  volume_lifecycle.rs
crates/tgcryptfs-deadman/: Cargo.toml
crates/tgcryptfs-deadman/src/: config.rs  daemon.rs  destroy.rs  error.rs  lib.rs  trigger.rs
crates/tgcryptfs-deadman/src/hooks/: mod.rs
crates/tgcryptfs-fuse/: Cargo.toml
crates/tgcryptfs-fuse/src/: error.rs  fs.rs  handle.rs  lib.rs
crates/tgcryptfs-fuse/tests/: e2e_filesystem.rs  security_fuse.rs
crates/tgcryptfs-sharing/: Cargo.toml
crates/tgcryptfs-sharing/src/: access.rs  error.rs  invite.rs  key_exchange.rs  lib.rs
crates/tgcryptfs-sharing/tests/: sharing_integration.rs
crates/tgcryptfs-store/: Cargo.toml
crates/tgcryptfs-store/src/: block_store.rs  deadman_store.rs  inode_store.rs  lib.rs  migrations.rs  opaque_schema.rs  policy_store.rs  query_rewriter.rs  schema.rs  sharing_store.rs  snapshot_store.rs  user_store.rs  volume_store.rs
crates/tgcryptfs-store/tests/: proptest_store.rs  store_integration.rs
crates/tgcryptfs-telegram/: Cargo.toml
crates/tgcryptfs-telegram/src/: client.rs  error.rs  lib.rs  mock.rs  types.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  GETTING_STARTED.md  SECURITY.md  SentenceRefs_v1_Specification.md  TELEGRAM_SETUP.md  USER_GUIDE.md
media/: blog-announcement.md  hackernews.md  producthunt.md  reddit-crypto.md  reddit-privacy.md  reddit-rust.md  twitter-thread.md
scripts/: build.sh  install.ps1  install.sh  setup-telegram.sh
site/: index.html
system/: com.hedonistic-io.tgcryptfs-api.plist  io.hedonistic.tgcryptfs-api.plist  tgcryptfs-api.service  tgcryptfs-deadman.service  tgcryptfs-deadman.timer
