[workspace]
resolver = "2"
members = [
    "crates/tgcryptfs-core",
    "crates/tgcryptfs-store",
    "crates/tgcryptfs-telegram",
    "crates/tgcryptfs-cache",
    "crates/tgcryptfs-fuse",
    "crates/tgcryptfs-sharing",
    "crates/tgcryptfs-deadman",
    "crates/tgcryptfs-api",
    "crates/tgcryptfs-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/hedonistic-io/tgcryptfs"
homepage = "https://github.com/hedonistic-io/tgcryptfs"
keywords = ["encryption", "filesystem", "telegram", "fuse", "post-quantum"]
categories = ["cryptography", "filesystem"]

[workspace.dependencies]
# Internal crates
tgcryptfs-core = { path = "crates/tgcryptfs-core" }
tgcryptfs-store = { path = "crates/tgcryptfs-store" }
tgcryptfs-telegram = { path = "crates/tgcryptfs-telegram" }
tgcryptfs-cache = { path = "crates/tgcryptfs-cache" }
tgcryptfs-fuse = { path = "crates/tgcryptfs-fuse" }
tgcryptfs-sharing = { path = "crates/tgcryptfs-sharing" }
tgcryptfs-deadman = { path = "crates/tgcryptfs-deadman" }
tgcryptfs-api = { path = "crates/tgcryptfs-api" }

# Crypto
chacha20poly1305 = "0.10"
blake3 = "1"
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
ml-kem = "0.2"
kem = "0.3.0-pre.0"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", default-features = false, features = ["alloc", "use-std"] }
ciborium = "0.2"

# Storage
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# Telegram
grammers-client = "0.6"
grammers-session = "0.5"
grammers-tl-types = "0.4"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# FUSE
fuser = "0.14"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# API
tonic = "0.12"
prost = "0.13"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
tempfile = "3"
dirs = "5"
hex = "0.4"
base32 = "0.5"
base64ct = { version = "1", features = ["alloc"] }
async-trait = "0.1"
libc = "0.2"
rpassword = "7"

# Testing
proptest = "1"
assert_cmd = "2"
predicates = "3"
