[package]
name = "tgcryptfs-api"
description = "gRPC and REST management API server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
test-helpers = ["dep:tempfile"]

[dependencies]
tgcryptfs-core = { workspace = true }
tgcryptfs-store = { workspace = true }
tgcryptfs-telegram = { workspace = true }
tgcryptfs-cache = { workspace = true }
tgcryptfs-fuse = { workspace = true }
tgcryptfs-sharing = { workspace = true }
tgcryptfs-deadman = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tgcryptfs-api = { path = ".", features = ["test-helpers"] }
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
