[package]
name = "tgcryptfs-cli"
description = "TGCryptFS v2 command-line interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "tgcryptfs"
path = "src/main.rs"

[dependencies]
tgcryptfs-core = { workspace = true }
tgcryptfs-store = { workspace = true }
tgcryptfs-telegram = { workspace = true }
tgcryptfs-cache = { workspace = true }
tgcryptfs-fuse = { workspace = true }
tgcryptfs-sharing = { workspace = true }
tgcryptfs-deadman = { workspace = true }
tgcryptfs-api = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
fuser = { workspace = true }
rpassword = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
