[package]
name = "tgcryptfs-fuse"
description = "FUSE filesystem layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
tgcryptfs-core = { workspace = true }
tgcryptfs-store = { workspace = true }
tgcryptfs-cache = { workspace = true }
tgcryptfs-telegram = { workspace = true }
fuser = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
